--- a/index.html
+++ b/index.html
@@ -4,6 +4,228 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./scss/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <a href="#" class="logo">
+            <img src="./images/Logo1.svg" alt="logo1" />
+          </a>
+          <div class="nav_items">
+            <a href="#" class="nav_link">Home</a>
+            <a href="#" class="nav_link">About us</a>
+            <a href="#" class="nav_link">Pricing</a>
+            <a href="#" class="nav_link">Work</a>
+            <a href="#" class="nav_link">Blog</a>
+            <button class="btn-1"><a href="#"> Contact us </a></button>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <section class="hero">
+      <div class="container">
+        <div class="hero_content">
+          <div class="hero_text">
+            <h1>Building stellar websites for early startups</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <div class="btn_hero">
+              <button class="work_btn">View our work</button>
+              <button class="pricing_btn">
+                View Pricing
+                <span> <img src="./images/icon1.svg" alt="icon" /></span>
+              </button>
+            </div>
+          </div>
+          <div class="hero_image">
+            <img src="./images/Illustration.svg" alt="image" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="view">
+      <div class="container">
+        <div class="view_content">
+          <div class="view-text">
+            <h1>View our projects</h1>
+            <button class="btn_view">
+              View More
+              <span> <img src="./images/icon2.svg" alt="icon" /></span>
+            </button>
+          </div>
+          <div class="view_image">
+            <div class="image_wrap">
+              <img src="./images/card1.png" alt="card" />
+              <div class="liner">
+                <h1>Workhub office Webflow Webflow Design</h1>
+                <p>
+                  Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+                  aliquam
+                </p>
+                <button class="btn_liner">
+                  View More
+                  <span> <img src="./images/arrow4.svg" alt="icon" /></span>
+                </button>
+              </div>
+            </div>
+            <div class="image2_wrap">
+              <div class="img1">
+                <img src="./images/card2.png" alt="card" />
+                <div class="linear2">
+                  <h1>Unisaas Website Design</h1>
+                  <button class="btn_liner">
+                    View More
+                    <span> <img src="./images/arrow4.svg" alt="icon" /></span>
+                  </button>
+                </div>
+              </div>
+              <div class="img2">
+                <img src="./images/card3.png" alt="card" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="features">
+      <div class="container">
+        <div class="features_text">
+          <h6>Features</h6>
+          <h1>Design that solves problems, one product at a time</h1>
+        </div>
+        <div class="feature_card">
+          <div class="feature_cards">
+            <h2>Uses Client First</h2>
+            <p>
+              Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+              aliquam sed faucib turpis eu gravida mi. Pellentesque et velit
+              aliquam sed mi.
+            </p>
+          </div>
+          <div class="feature_cards">
+            <h2>Two Free Revision Round</h2>
+            <p>
+              Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+              aliquam sed faucib turpis eu gravida mi. Pellentesque et velit
+              aliquam sed mi.
+            </p>
+          </div>
+          <div class="feature_cards">
+            <div class="card_image">
+              <img src="./images/Icon_feature.svg" alt="icon" />
+            </div>
+            <h2>Template Customization</h2>
+            <p>
+              Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+              aliquam sed faucib turpis eu gravida mi. Pellentesque et velit
+              aliquam sed mi.
+            </p>
+          </div>
+        </div>
+        <div class="feature_card2">
+          <div class="feature_cards">
+            <div class="card_image">
+              <img src="./images/Icon_feature2.svg" alt="icon" />
+            </div>
+            <h2>24/7 Support</h2>
+            <p>
+              Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+              aliquam sed faucib turpis eu gravida mi. Pellentesque et velit
+              aliquam sed mi.
+            </p>
+          </div>
+          <div class="feature_cards">
+            <div class="card_image">
+              <img src="./images/Icon_feature3.svg" alt="icon" />
+            </div>
+            <h2>Quick Delivery</h2>
+            <p>
+              Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+              aliquam sed faucib turpis eu gravida mi. Pellentesque et velit
+              aliquam sed mi.
+            </p>
+          </div>
+          <div class="feature_cards">
+            <h2>Hands-on approach</h2>
+            <p>
+              Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+              aliquam sed faucib turpis eu gravida mi. Pellentesque et velit
+              aliquam sed mi.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="clients">
+      <div class="container">
+        <div class="clients_content">
+          <div class="clients_text1">
+            <h1>What our clients say about us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
+          </div>
+          <div class="clients_text2">
+            <p>
+              "The best agency we’ve worked with so far. They understand our
+              product and are able to add new features with a great focus."
+            </p>
+            <div class="wilson">
+              <div class="small_image">
+                <img
+                  src="./images/woman-in-collared-shirt-774909.png"
+                  alt="image"
+                />
+                <div class="small_text">
+                  <h4>Jenny Wilson</h4>
+                  <p>Vice President</p>
+                </div>
+              </div>
+              <div class="arrow">
+                <img src="./images/Arrows1.svg" alt="arrow" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  <footer>
+    <div class="container">
+      <div class="footer_content">
+        <div class="footer_image">
+          <img src="./images/Logo1.svg" alt="logo" />
+          <p>
+            We are always open to discuss your project and improve your online
+            presence.
+          </p>
+          <div class="email_call">
+            <div class="email">
+              <h4>Email me at</h4>
+              <p>contact@website.com</p>
+            </div>
+            <div class="call">
+              <h4>Call us</h4>
+              <p>0927 6277 28525</p>
+            </div>
+          </div>
+        </div>
+        <div class="talk_con">
+          <h1>Lets Talk!</h1>
+          <p>
+            We are always open to discuss your project, improve your online
+            presence and help with your UX/UI design challenges.
+          </p>
+          <div class="social_icons">
+            <img src="./images/facebook.svg" alt="facebook" />
+            <img src="./images/twitter.svg" alt="facebook" />
+            <img src="./images/insta.svg" alt="facebook" />
+            <img src="./images/lonked.svg" alt="facebook" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
