--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <a href="#" class="nav_link">Pricing</a>
             <a href="#" class="nav_link">Work</a>
             <a href="#" class="nav_link">Blog</a>
-            <button class="btn-1"><a href="#"> Contact us </a></button>
+            <button class="btn-1">
+              <a href="./pages/contact.html"> Contact us </a>
+            </button>
           </div>
         </nav>
       </div>
