pricing and blog

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           <div class="nav_items">
             <a href="#" class="nav_link">Home</a>
             <a href="#" class="nav_link">About us</a>
-            <a href="#" class="nav_link">Pricing</a>
+            <a href="./pages/pricing.html" class="nav_link">Pricing</a>
             <a href="#" class="nav_link">Work</a>
-            <a href="#" class="nav_link">Blog</a>
+            <a href="./pages/blog.html" class="nav_link">Blog</a>
             <button class="btn-1">
               <a href="./pages/contact.html"> Contact us </a>
             </button>
