--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,11 +18,11 @@
           <div class="nav_items">
             <a href="../index.html" class="nav_link">Home</a>
             <a href="#" class="nav_link">About us</a>
-            <a href="#" class="nav_link">Pricing</a>
+            <a href="./pricing.html" class="nav_link">Pricing</a>
             <a href="#" class="nav_link">Work</a>
-            <a href="#" class="nav_link">Blog</a>
+            <a href="./blog.html" class="nav_link">Blog</a>
             <button class="btn-1">
-              <a href="#"> Contact us </a>
+              <a href="./contact.html"> Contact us </a>
             </button>
           </div>
         </nav>
