--- a/pages/contact.html
+++ b/pages/contact.html
@@ -103,4 +103,40 @@
     </main>
     <!-- main -->
   </body>
+  <footer>
+    <div class="container">
+      <div class="footer_content">
+        <div class="footer_image">
+          <img src="../images/Logo1.svg" alt="logo" />
+          <p>
+            We are always open to discuss your project and improve your online
+            presence.
+          </p>
+          <div class="email_call">
+            <div class="email">
+              <h4>Email me at</h4>
+              <p>contact@website.com</p>
+            </div>
+            <div class="call">
+              <h4>Call us</h4>
+              <p>0927 6277 28525</p>
+            </div>
+          </div>
+        </div>
+        <div class="talk_con">
+          <h1>Lets Talk!</h1>
+          <p>
+            We are always open to discuss your project, improve your online
+            presence and help with your UX/UI design challenges.
+          </p>
+          <div class="social_icons">
+            <img src="../images/facebook.svg" alt="facebook" />
+            <img src="../images/twitter.svg" alt="facebook" />
+            <img src="../images/insta.svg" alt="facebook" />
+            <img src="../images/lonked.svg" alt="facebook" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
