--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../scss/style.css">
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
 </head>
 
 <body>
@@ -20,7 +24,7 @@
                     <a href="../index.html" class="nav_link">Home</a>
                     <a href="#" class="nav_link">About us</a>
                     <a href="./pricing.html" class="nav_link">Pricing</a>
-                    <a href="#" class="nav_link">Work</a>
+                    <a href="./work.html" class="nav_link">Work</a>
                     <a href="./blog.html" class="nav_link">Blog</a>
                     <button class="btn-1">
                         <a href="./contact.html"> Contact us </a>
@@ -203,5 +207,9 @@
         </div>
       </div>
     </div>
+    <button id="backtop">
+        <i class="fa-solid fa-arrow-up"></i>
+      </button>
+      <script src="../js/main.js"></script>
   </footer>
 </html>
